--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     font-family: Averta, sans-serif;
 }
+:root{
+    --buttonBg: #4869E8;
+}
 header{
     height: 90px;
     width: 100%;
@@ -35,4 +38,34 @@ nav li{
 nav a{
     text-decoration: none;
     color: inherit;
+}
+header .contact{
+    height: 40px;
+    width: 290px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 13px;
+    line-height: 20px;
+    font-weight: 700;
+    color: white;
+}
+.contact a{
+    text-decoration: none;
+    color: inherit;
+}
+button{
+    background-color: var(--buttonBg);
+    color: white;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-size: 13px;
+    line-height: 20px;
+    font-weight: 700;
+    border: none;
+    cursor: pointer;
+}
+#btnTouch{
+    height: 40px;
+    width: 146px;
 }
