--- a/style.css
+++ b/style.css
@@ -78,4 +78,60 @@ main{
     width: 100%;
     background-image: url(images/revolutionizing-enterprises-digitally.jpg);
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+main .content{
+    height: 430px;
+    width: 1140px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    color: white;
+}
+main h1{
+    width: 480px;
+    height: 63px;
+    font-size: 50px;
+    line-height: 64px;
+    font-weight: 700;
+}
+main p{
+    height: 77px;
+    width: 510px;
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: 400;
+}
+#btnTalk{
+    height: 54px;
+    width: 160px;
+}
+.trustedBy{
+    width: 100%;
+    height: 54px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.trustedBy .companies{
+    width: 475px;
+    height: 54px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+/* .companies p{
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 500;
+} */
+.companies img{
+    height: 25px;
+    width: 70px;
+}
+.companies #logo{
+    height: 50px;
+    width: 50px;
 }
