--- a/style.css
+++ b/style.css
@@ -219,7 +219,33 @@ main p {
   fill: white;
 }
 section{
+  width: 100%;
+  height: 1000px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+section .ideas{
+  width: 80%;
+  height: 800px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
+.ideas h1{
+  width: 750px;
+  height: 106px;
+  font-size: 42px;
+  line-height: 54px;
+  font-weight: 700;
+  text-align: center;
+}
+.ideas .ideasRow{
+  width: 100%;
+  height: 616px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: yellow;
 }
