--- a/style.css
+++ b/style.css
@@ -221,14 +221,15 @@ main p {
 }
 section{
   width: 100%;
-  height: 1000px;
+  height: 2800px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
 }
 section .ideas{
-  width: 88%;
-  height: 800px;
+  width: 80%;
+  height: 1500px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -248,6 +249,8 @@ section .ideas{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 6em;
+  margin-bottom: 6em;
 }
 #img1{
   position: relative;
@@ -261,6 +264,20 @@ section .ideas{
   width: 140px;
   position: absolute;
   margin-left:20em;
+  /* margin-bottom: 10em; */
+}
+#img4{
+  position: relative;
+}
+#img5{
+  position: absolute;
+  margin-left:30em;
+}
+#img6{
+  height: 140px;
+  width: 140px;
+  position: absolute;
+  margin-left:30em;
   /* margin-bottom: 10em; */
 }
 .ideasRow .ideasCol{
