--- a/style.css
+++ b/style.css
@@ -318,4 +318,15 @@ section .ideas{
   width: 100%;
   height: 660px;
   background-color: var(--solutionsBg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.solutions .content{
+  height: 500px;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
 }
