--- a/style.css
+++ b/style.css
@@ -384,5 +384,20 @@ section .ideas{
 .awards{
   height:835px;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: white;
+}
+.awards h1{
+  font-size: 42px;
+  line-height: 54px;
+  font-weight: 700;
+}
+.awardsRow{
+  width: 80%;
+  height: 327px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
