--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   --productsGrey: rgba(255, 255, 255, 0.5);
   --productsColHover: #1e1666;
   --ideasColCat: #ffb09f;
-  --solutionsBg: #F2F5FA;
+  --solutionsBg: #f2f5fa;
 }
 header {
   height: 90px;
@@ -220,7 +220,7 @@ main p {
 .productsCol svg {
   fill: white;
 }
-section{
+section {
   width: 100%;
   max-width: 75%;
   height: 2800px;
@@ -229,7 +229,7 @@ section{
   flex-direction: column;
   align-items: center;
 }
-section .ideas{
+section .ideas {
   width: 80%;
   height: 1500px;
   display: flex;
@@ -237,7 +237,7 @@ section .ideas{
   align-items: center;
   flex-direction: column;
 }
-.ideas h1{
+.ideas h1 {
   width: 750px;
   height: 106px;
   font-size: 42px;
@@ -245,7 +245,7 @@ section .ideas{
   font-weight: 700;
   text-align: center;
 }
-.ideas .ideasRow{
+.ideas .ideasRow {
   width: 100%;
   height: 616px;
   display: flex;
@@ -254,49 +254,49 @@ section .ideas{
   margin-top: 6em;
   margin-bottom: 6em;
 }
-#img1{
+#img1 {
   position: relative;
 }
-#img2{
+#img2 {
   position: absolute;
-  margin-left:4em;
+  margin-left: 4em;
 }
-#img3{
+#img3 {
   height: 140px;
   width: 140px;
   position: absolute;
-  margin-left:20em;
+  margin-left: 20em;
   /* margin-bottom: 10em; */
 }
-#img4{
+#img4 {
   position: relative;
 }
-#img5{
+#img5 {
   position: absolute;
-  margin-left:30em;
+  margin-left: 30em;
 }
-#img6{
+#img6 {
   height: 140px;
   width: 140px;
   position: absolute;
-  margin-left:30em;
+  margin-left: 30em;
   /* margin-bottom: 10em; */
 }
-.ideasRow .ideasCol{
+.ideasRow .ideasCol {
   height: 440px;
   width: 540px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
 }
-.ideasCol img{
+.ideasCol img {
   height: 80px;
   width: 80px;
 }
-.ideasCol h1{
+.ideasCol h1 {
   text-align: left;
 }
-.ideasCol h3{
+.ideasCol h3 {
   font-size: 12px;
   line-height: 14px;
   font-weight: 600;
@@ -304,18 +304,18 @@ section .ideas{
   color: var(--ideasColCat);
   text-transform: capitalize;
 }
-.ideasCol p{
+.ideasCol p {
   height: 80px;
   width: 520px;
   font-size: 19px;
   line-height: 33px;
   font-weight: 400;
 }
-.btnCaseStudy{
+.btnCaseStudy {
   width: 205px;
   height: 56px;
 }
-.solutions{
+.solutions {
   width: 100%;
   height: 660px;
   background-color: var(--solutionsBg);
@@ -323,7 +323,7 @@ section .ideas{
   justify-content: center;
   align-items: center;
 }
-.solutions .content{
+.solutions .content {
   height: 500px;
   width: 80%;
   display: flex;
@@ -331,7 +331,7 @@ section .ideas{
   align-items: center;
   flex-direction: column;
 }
-.solutions h1{
+.solutions h1 {
   width: 960px;
   height: 86px;
   font-size: 42px;
@@ -339,7 +339,7 @@ section .ideas{
   font-weight: 700;
   text-align: center;
 }
-.solutions h2{
+.solutions h2 {
   width: 800px;
   height: 124px;
   font-size: 23px;
@@ -347,42 +347,41 @@ section .ideas{
   font-weight: 700;
   text-align: center;
 }
-.solutions .name{
+.solutions .name {
   width: 250px;
   height: 50px;
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-.solutions h3{
+.solutions h3 {
   font-size: 22px;
   line-height: 30px;
   font-weight: 600;
 }
-.solutions p{
+.solutions p {
   font-size: 19px;
   line-height: 33px;
   font-weight: 400;
 }
-.solutions .rating{
+.solutions .rating {
   width: 373px;
   height: 35px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.rating .pBlue{
-
+.rating .pBlue {
   color: var(--buttonBg);
 }
-.rating p{
+.rating p {
   font-size: 16px;
   line-height: 26px;
   font-weight: 600;
 }
-.awards{
-  height:835px;
+.awards {
+  height: 835px;
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -390,39 +389,46 @@ section .ideas{
   flex-direction: column;
   background-color: white;
 }
-.awards h1{
+.awards h1 {
   font-size: 42px;
   line-height: 54px;
   font-weight: 700;
 }
-.awardsRow{
-  width: 80%;
-  height: 327px;
+.awardsRow {
+  width: 95%;
+  height: 500px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  background-color: yellow;
 }
-.awardsCol{
+.awardsCol {
   width: 290px;
   height: 327px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #4869e8;
+  box-shadow: 0 0 20px silver;
 }
-.awardsCol .content{
+.awardsCol .content {
   width: 210px;
-  height:248px;
+  height: 248px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
-  border: 1px solid black;
 }
-.awardsCol img{
+.awardsCol img {
   width: 93px;
   height: 100;
 }
-
+.awardsCol h3 {
+  font-size: 19px;
+  line-height: 26px;
+  font-weight: 700;
+}
+.awards #des{
+  font-weight: 400;
+}
+#margin-top{
+  margin-top: 11em;
+}
