--- a/style.css
+++ b/style.css
@@ -435,4 +435,31 @@ section .ideas {
 .partners{
   height: 650px;
   width: 100%;
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  background-color: var(--solutionsBg);
+}
+.partners h1{
+  height: 100px;
+  width: 550px;
+  text-align: center;
+  font-size: 42px;
+  line-height: 54px;
+  font-weight: 700;
+}
+.partnersRow{
+  width: 80%;
+  height: 260px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.partnersCol{
+  height: 260px;
+  width: 260px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
