--- a/style.css
+++ b/style.css
@@ -513,10 +513,9 @@ footer h1{
 }
 .addresslinksRow{
   height: 172px;
-  width: 80%;
+  width: 85%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 .addresslinksRow .addresslinksCol{
   height: inherit;
@@ -549,4 +548,33 @@ footer h1{
   color: var(--buttonBg);
   text-decoration: none;
   font-weight: 700;
+}
+.links{
+  height: 123px;
+  width: 450px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.linksRow{
+  height: 85px;
+  width:450px;
+  display: flex;
+  justify-content: space-between;
+}
+.linksCol{
+  height: 85px;
+  width: 200px;
+}
+.linksCol li{
+  list-style-type: none;
+  margin-top: 0.3em;
+  font-size: 15px;
+  line-height: 32px;
+  font-weight: 400;
+  color: var(--addresslinks);
+}
+.linksCol a{
+  color: inherit;
+  text-decoration: none;
 }
